--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
 	"author": "Achraf Ezzaam",
 	"description": "A project with nodejs using the express framework to get the freecodecamp backend certification",
+	"keywords": [ "freecodecamp", "nodejs", "express", "certification" ],
+	"license": "MIT",
+	"version": "1.0.0",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"@freecodecamp/example": "^1.2.13"
 	},
 	"main": "server.js",
 	"scripts": {
